# U.bot

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  DATA_FLOW.md  LAYERED_AUTHORITY_SYSTEM.md  MVP_PLAN.md  Makefile  README.md  TODO.md  TROUBLESHOOTING.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: ci.yml  release.yml
backend/: requirements.txt  server.py
backend/providers/: __init__.py  base.py  claude_provider.py  gemini_provider.py  ollama_provider.py  openai_provider.py
scripts/: homebrew-formula.rb  install.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: SettingsModal.tsx
src/components/chat/: AIMessage.tsx  ChatView.tsx  CodeBlock.tsx  MessageList.tsx  UserMessage.tsx
src/components/game/: GameView.tsx  PhaserGame.tsx
src/components/layout/: CommandInput.tsx  Header.tsx  Sidebar.tsx
src/services/ai/: blindJudge.ts  decisionEngine.ts  orchestrator.ts  planner.ts  stabilityTracker.ts
src/services/api/: aiProvider.ts
src/stores/: aiStore.ts  appStore.ts  chatStore.ts
src/styles/: globals.css
src/types/: index.ts
